--- a/Infrastructure/pipeline-build.yaml
+++ b/Infrastructure/pipeline-build.yaml
@@ -43,4 +43,5 @@ steps:
     command: 'push'
     packagesToPush: '$(Build.ArtifactStagingDirectory)/*.nupkg'
     nuGetFeedType: 'internal'
-    publishVstsFeed: 'd59ee4fb-1193-47d7-9407-fbfbea1b29a0/30ce3bca-343c-44ad-987f-3ea0b786c1c6'
+    publishVstsFeed: '22ee57b1-5ef3-43d9-9484-4e0f7498b93e'
+    
