--- a/nuget.config
+++ b/nuget.config
@@ -3,7 +3,7 @@
   <packageSources>
     <!--To inherit the global NuGet package sources remove the <clear/> line below -->
     <clear />
-    <add key="nuget" value="https://api.nuget.org/v3/index.json" />
-    <add key="playground-eg-nuget-feed" value="https://pkgs.dev.azure.com/cyyong/playground-examples/_packaging/playground-eg-nuget-feed/nuget/v3/index.json" />
+    <!-- <add key="nuget" value="https://api.nuget.org/v3/index.json" /> -->
+    <add key="cyyong.feed" value="https://pkgs.dev.azure.com/cyyong/_packaging/cyyong.feed/nuget/v3/index.json" />
   </packageSources>
 </configuration>
