add reference to nuget package from internal feed

--- a/ImportantApp.ConsoleApp/ImportantApp.ConsoleApp.csproj
+++ b/ImportantApp.ConsoleApp/ImportantApp.ConsoleApp.csproj
@@ -1,15 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <ItemGroup>
-    <ProjectReference Include="..\ImportantApp.HardMath\ImportantApp.HardMath.csproj" />
-    <ProjectReference Include="..\ImportantApp.SimpleMath\ImportantApp.SimpleMath.csproj" />
-  </ItemGroup>
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="ImportantApp.HardMath" Version="2023.8.24.8" />
+    <PackageReference Include="ImportantApp.SimpleMath" Version="2023.8.24.8" />
+  </ItemGroup>
 
 </Project>
